kubernetes/catch-all/redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: catch-all-redirect
  namespace: kube-system
  labels:
    app.kubernetes.io/name: catch-all
    app.kubernetes.io/instance: catch-all-kube-system

spec:
  errors:
    status:
      - "500"
      - "501"
      - "503"
      - "505-599"
    query: /{status}.html
    service:
      name: catch-all
      port: catch-all
