kubernetes/catch-all/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catch-all
  namespace: kube-system
  labels:
    app.kubernetes.io/name: catch-all
    app.kubernetes.io/instance: catch-all-kube-system

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: catch-all
      app.kubernetes.io/instance: catch-all-kube-system
  template:
    metadata:
      labels:
        app.kubernetes.io/name: catch-all
        app.kubernetes.io/instance: catch-all-kube-system
    spec:
      containers:
        - name: catch-all
          image: nginx:1.27-alpine
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
            requests:
              memory: "128Mi"
              cpu: "125m"
          ports:
            - name: catch-all
              containerPort: 7000
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: html-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: config-volume
          configMap:
            name: catch-all-config
        - name: html-volume
          emptyDir: {}
