kubernetes/catch-all/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catchall-service

spec:
  ports:
    - name: catchall
      protocol: TCP
      port: 80
      targetPort: 8082
  selector:
    app: traefik
