kubernetes/catch-all/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: catch-all
  namespace: kube-system
  labels:
    app.kubernetes.io/name: catch-all
    app.kubernetes.io/instance: catch-all-kube-system

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: HostRegexp(`.+`)
      kind: Rule
      priority: 1
      services:
        - name: catch-all
          port: catch-all
      middlewares:
        - name: catch-all-redirect
        - namespace: kube-system
